// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns expected CloudFormation stack for dev 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "kmskey49FBC3B3": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "Description": "serviceName",
        "EnableKeyRotation": true,
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Create*",
                "kms:Describe*",
                "kms:Enable*",
                "kms:List*",
                "kms:Put*",
                "kms:Update*",
                "kms:Revoke*",
                "kms:Disable*",
                "kms:Get*",
                "kms:Delete*",
                "kms:TagResource",
                "kms:UntagResource",
                "kms:ScheduleKeyDeletion",
                "kms:CancelKeyDeletion",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:GenerateDataKey",
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": "sns.amazonaws.com",
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
    "kmskeyAlias39245779": {
      "Properties": {
        "AliasName": "alias/seek/self/serviceName",
        "TargetKeyId": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
      },
      "Type": "AWS::KMS::Alias",
    },
    "sourcetopic7C3DC892": {
      "Type": "AWS::SNS::Topic",
    },
    "worker28EA3E30": {
      "DependsOn": [
        "workerServiceRoleDefaultPolicyBA498553",
        "workerServiceRole2130CC7F",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.zip",
        },
        "Description": "Updated at 1212-12-12T12:12:12.121Z",
        "Environment": {
          "Variables": {
            "ENVIRONMENT": "dev",
            "NODE_ENV": "production",
            "NODE_OPTIONS": "--enable-source-maps",
            "SERVICE": "serviceName",
            "VERSION": "local",
          },
        },
        "FunctionName": "serviceName",
        "Handler": "index.handler",
        "KmsKeyArn": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
        "ReservedConcurrentExecutions": 2,
        "Role": {
          "Fn::GetAtt": [
            "workerServiceRole2130CC7F",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "aws-codedeploy-hooks",
            "Value": "2.1.1-8a9d620b7ff7fbe76112f7c96c06f51e36bb2cb3",
          },
        ],
        "Timeout": 30,
      },
      "Type": "AWS::Lambda::Function",
    },
    "workerAliasLive4B82F015": {
      "Properties": {
        "Description": "The Lambda version currently receiving traffic",
        "FunctionName": {
          "Ref": "worker28EA3E30",
        },
        "FunctionVersion": {
          "Fn::GetAtt": [
            "workerCurrentVersionxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
            "Version",
          ],
        },
        "Name": "Live",
      },
      "Type": "AWS::Lambda::Alias",
      "UpdatePolicy": {
        "CodeDeployLambdaAliasUpdate": {
          "AfterAllowTrafficHook": {
            "Fn::Select": [
              6,
              {
                "Fn::Split": [
                  ":",
                  {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":lambda:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":function:aws-codedeploy-hook-AfterAllowTraffic",
                      ],
                    ],
                  },
                ],
              },
            ],
          },
          "ApplicationName": {
            "Ref": "workerDeploymentCodeDeployLambdaApplication9974008D",
          },
          "BeforeAllowTrafficHook": {
            "Fn::Select": [
              6,
              {
                "Fn::Split": [
                  ":",
                  {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":lambda:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":function:aws-codedeploy-hook-BeforeAllowTraffic",
                      ],
                    ],
                  },
                ],
              },
            ],
          },
          "DeploymentGroupName": {
            "Ref": "workerDeploymentCodeDeployLambdaDeploymentGroupF884ECDA",
          },
        },
      },
    },
    "workerAliasLiveSqsEventSourceappStackworkerqueue8281B9F443B0CF93": {
      "Properties": {
        "EventSourceArn": {
          "Fn::GetAtt": [
            "workerqueueA05CE5C6",
            "Arn",
          ],
        },
        "FunctionName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::Select": [
                  6,
                  {
                    "Fn::Split": [
                      ":",
                      {
                        "Ref": "workerAliasLive4B82F015",
                      },
                    ],
                  },
                ],
              },
              ":Live",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "workerCurrentVersionxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx": {
      "Properties": {
        "FunctionName": {
          "Ref": "worker28EA3E30",
        },
      },
      "Type": "AWS::Lambda::Version",
    },
    "workerDeploymentCodeDeployLambdaApplication9974008D": {
      "Properties": {
        "ComputePlatform": "Lambda",
        "Tags": [
          {
            "Key": "aws-codedeploy-hooks",
            "Value": "2.1.1-8a9d620b7ff7fbe76112f7c96c06f51e36bb2cb3",
          },
        ],
      },
      "Type": "AWS::CodeDeploy::Application",
    },
    "workerDeploymentCodeDeployLambdaDeploymentGroupF884ECDA": {
      "Properties": {
        "ApplicationName": {
          "Ref": "workerDeploymentCodeDeployLambdaApplication9974008D",
        },
        "AutoRollbackConfiguration": {
          "Enabled": true,
          "Events": [
            "DEPLOYMENT_FAILURE",
          ],
        },
        "DeploymentConfigName": "CodeDeployDefault.LambdaAllAtOnce",
        "DeploymentStyle": {
          "DeploymentOption": "WITH_TRAFFIC_CONTROL",
          "DeploymentType": "BLUE_GREEN",
        },
        "ServiceRoleArn": {
          "Fn::GetAtt": [
            "workerDeploymentCodeDeployLambdaDeploymentGroupServiceRole351C6FAE",
            "Arn",
          ],
        },
        "Tags": [
          {
            "Key": "aws-codedeploy-hooks",
            "Value": "2.1.1-8a9d620b7ff7fbe76112f7c96c06f51e36bb2cb3",
          },
        ],
      },
      "Type": "AWS::CodeDeploy::DeploymentGroup",
    },
    "workerDeploymentCodeDeployLambdaDeploymentGroupServiceRole351C6FAE": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "codedeploy.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSCodeDeployRoleForLambdaLimited",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "aws-codedeploy-hooks",
            "Value": "2.1.1-8a9d620b7ff7fbe76112f7c96c06f51e36bb2cb3",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "workerDeploymentCodeDeployLambdaDeploymentGroupServiceRoleDefaultPolicy30B750B5": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":lambda:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":function:aws-codedeploy-hook-BeforeAllowTraffic",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":lambda:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":function:aws-codedeploy-hook-BeforeAllowTraffic:*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":lambda:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":function:aws-codedeploy-hook-AfterAllowTraffic",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":lambda:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":function:aws-codedeploy-hook-AfterAllowTraffic:*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "workerDeploymentCodeDeployLambdaDeploymentGroupServiceRoleDefaultPolicy30B750B5",
        "Roles": [
          {
            "Ref": "workerDeploymentCodeDeployLambdaDeploymentGroupServiceRole351C6FAE",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "workerServiceRole2130CC7F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "aws-codedeploy-hooks",
            "Value": "2.1.1-8a9d620b7ff7fbe76112f7c96c06f51e36bb2cb3",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "workerServiceRoleDefaultPolicyBA498553": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "workerqueueA05CE5C6",
                  "Arn",
                ],
              },
            },
            {
              "Action": "kms:Decrypt",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "kmskey49FBC3B3",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "workerServiceRoleDefaultPolicyBA498553",
        "Roles": [
          {
            "Ref": "workerServiceRole2130CC7F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "workerqueueA05CE5C6": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsMasterKeyId": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
        "QueueName": "serviceName",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "workerqueuedeadletters83F3505C",
              "Arn",
            ],
          },
          "maxReceiveCount": 3,
        },
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "workerqueuePolicy97054CB4": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sqs:SendMessage",
              "Condition": {
                "ArnEquals": {
                  "aws:SourceArn": {
                    "Ref": "sourcetopic7C3DC892",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "sns.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "workerqueueA05CE5C6",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Queues": [
          {
            "Ref": "workerqueueA05CE5C6",
          },
        ],
      },
      "Type": "AWS::SQS::QueuePolicy",
    },
    "workerqueueappStacksourcetopic613C6BDBD2F224F5": {
      "DependsOn": [
        "workerqueuePolicy97054CB4",
      ],
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "workerqueueA05CE5C6",
            "Arn",
          ],
        },
        "Protocol": "sqs",
        "TopicArn": {
          "Ref": "sourcetopic7C3DC892",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "workerqueuedeadletters83F3505C": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsMasterKeyId": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
        "QueueName": "serviceName-dead-letters",
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`returns expected CloudFormation stack for prod 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "kmskey49FBC3B3": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "Description": "serviceName",
        "EnableKeyRotation": true,
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Create*",
                "kms:Describe*",
                "kms:Enable*",
                "kms:List*",
                "kms:Put*",
                "kms:Update*",
                "kms:Revoke*",
                "kms:Disable*",
                "kms:Get*",
                "kms:Delete*",
                "kms:TagResource",
                "kms:UntagResource",
                "kms:ScheduleKeyDeletion",
                "kms:CancelKeyDeletion",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:GenerateDataKey",
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": "sns.amazonaws.com",
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
    "kmskeyAlias39245779": {
      "Properties": {
        "AliasName": "alias/seek/self/serviceName",
        "TargetKeyId": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
      },
      "Type": "AWS::KMS::Alias",
    },
    "sourcetopic7C3DC892": {
      "Type": "AWS::SNS::Topic",
    },
    "worker28EA3E30": {
      "DependsOn": [
        "workerServiceRoleDefaultPolicyBA498553",
        "workerServiceRole2130CC7F",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.zip",
        },
        "Description": "Updated at 1212-12-12T12:12:12.121Z",
        "Environment": {
          "Variables": {
            "ENVIRONMENT": "prod",
            "NODE_ENV": "production",
            "NODE_OPTIONS": "--enable-source-maps",
            "SERVICE": "serviceName",
            "VERSION": "local",
          },
        },
        "FunctionName": "serviceName",
        "Handler": "index.handler",
        "KmsKeyArn": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
        "ReservedConcurrentExecutions": 20,
        "Role": {
          "Fn::GetAtt": [
            "workerServiceRole2130CC7F",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "aws-codedeploy-hooks",
            "Value": "2.1.1-8a9d620b7ff7fbe76112f7c96c06f51e36bb2cb3",
          },
        ],
        "Timeout": 30,
      },
      "Type": "AWS::Lambda::Function",
    },
    "workerAliasLive4B82F015": {
      "Properties": {
        "Description": "The Lambda version currently receiving traffic",
        "FunctionName": {
          "Ref": "worker28EA3E30",
        },
        "FunctionVersion": {
          "Fn::GetAtt": [
            "workerCurrentVersionxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
            "Version",
          ],
        },
        "Name": "Live",
      },
      "Type": "AWS::Lambda::Alias",
      "UpdatePolicy": {
        "CodeDeployLambdaAliasUpdate": {
          "AfterAllowTrafficHook": {
            "Fn::Select": [
              6,
              {
                "Fn::Split": [
                  ":",
                  {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":lambda:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":function:aws-codedeploy-hook-AfterAllowTraffic",
                      ],
                    ],
                  },
                ],
              },
            ],
          },
          "ApplicationName": {
            "Ref": "workerDeploymentCodeDeployLambdaApplication9974008D",
          },
          "BeforeAllowTrafficHook": {
            "Fn::Select": [
              6,
              {
                "Fn::Split": [
                  ":",
                  {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":lambda:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":function:aws-codedeploy-hook-BeforeAllowTraffic",
                      ],
                    ],
                  },
                ],
              },
            ],
          },
          "DeploymentGroupName": {
            "Ref": "workerDeploymentCodeDeployLambdaDeploymentGroupF884ECDA",
          },
        },
      },
    },
    "workerAliasLiveSqsEventSourceappStackworkerqueue8281B9F443B0CF93": {
      "Properties": {
        "EventSourceArn": {
          "Fn::GetAtt": [
            "workerqueueA05CE5C6",
            "Arn",
          ],
        },
        "FunctionName": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::Select": [
                  6,
                  {
                    "Fn::Split": [
                      ":",
                      {
                        "Ref": "workerAliasLive4B82F015",
                      },
                    ],
                  },
                ],
              },
              ":Live",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "workerCurrentVersionxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx": {
      "Properties": {
        "FunctionName": {
          "Ref": "worker28EA3E30",
        },
      },
      "Type": "AWS::Lambda::Version",
    },
    "workerDeploymentCodeDeployLambdaApplication9974008D": {
      "Properties": {
        "ComputePlatform": "Lambda",
        "Tags": [
          {
            "Key": "aws-codedeploy-hooks",
            "Value": "2.1.1-8a9d620b7ff7fbe76112f7c96c06f51e36bb2cb3",
          },
        ],
      },
      "Type": "AWS::CodeDeploy::Application",
    },
    "workerDeploymentCodeDeployLambdaDeploymentGroupF884ECDA": {
      "Properties": {
        "ApplicationName": {
          "Ref": "workerDeploymentCodeDeployLambdaApplication9974008D",
        },
        "AutoRollbackConfiguration": {
          "Enabled": true,
          "Events": [
            "DEPLOYMENT_FAILURE",
          ],
        },
        "DeploymentConfigName": "CodeDeployDefault.LambdaAllAtOnce",
        "DeploymentStyle": {
          "DeploymentOption": "WITH_TRAFFIC_CONTROL",
          "DeploymentType": "BLUE_GREEN",
        },
        "ServiceRoleArn": {
          "Fn::GetAtt": [
            "workerDeploymentCodeDeployLambdaDeploymentGroupServiceRole351C6FAE",
            "Arn",
          ],
        },
        "Tags": [
          {
            "Key": "aws-codedeploy-hooks",
            "Value": "2.1.1-8a9d620b7ff7fbe76112f7c96c06f51e36bb2cb3",
          },
        ],
      },
      "Type": "AWS::CodeDeploy::DeploymentGroup",
    },
    "workerDeploymentCodeDeployLambdaDeploymentGroupServiceRole351C6FAE": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "codedeploy.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSCodeDeployRoleForLambdaLimited",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "aws-codedeploy-hooks",
            "Value": "2.1.1-8a9d620b7ff7fbe76112f7c96c06f51e36bb2cb3",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "workerDeploymentCodeDeployLambdaDeploymentGroupServiceRoleDefaultPolicy30B750B5": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":lambda:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":function:aws-codedeploy-hook-BeforeAllowTraffic",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":lambda:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":function:aws-codedeploy-hook-BeforeAllowTraffic:*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":lambda:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":function:aws-codedeploy-hook-AfterAllowTraffic",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":lambda:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":function:aws-codedeploy-hook-AfterAllowTraffic:*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "workerDeploymentCodeDeployLambdaDeploymentGroupServiceRoleDefaultPolicy30B750B5",
        "Roles": [
          {
            "Ref": "workerDeploymentCodeDeployLambdaDeploymentGroupServiceRole351C6FAE",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "workerServiceRole2130CC7F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "aws-codedeploy-hooks",
            "Value": "2.1.1-8a9d620b7ff7fbe76112f7c96c06f51e36bb2cb3",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "workerServiceRoleDefaultPolicyBA498553": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "workerqueueA05CE5C6",
                  "Arn",
                ],
              },
            },
            {
              "Action": "kms:Decrypt",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "kmskey49FBC3B3",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "workerServiceRoleDefaultPolicyBA498553",
        "Roles": [
          {
            "Ref": "workerServiceRole2130CC7F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "workerqueueA05CE5C6": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsMasterKeyId": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
        "QueueName": "serviceName",
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "workerqueuedeadletters83F3505C",
              "Arn",
            ],
          },
          "maxReceiveCount": 3,
        },
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "workerqueuePolicy97054CB4": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sqs:SendMessage",
              "Condition": {
                "ArnEquals": {
                  "aws:SourceArn": {
                    "Ref": "sourcetopic7C3DC892",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "sns.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "workerqueueA05CE5C6",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Queues": [
          {
            "Ref": "workerqueueA05CE5C6",
          },
        ],
      },
      "Type": "AWS::SQS::QueuePolicy",
    },
    "workerqueueappStacksourcetopic613C6BDBD2F224F5": {
      "DependsOn": [
        "workerqueuePolicy97054CB4",
      ],
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "workerqueueA05CE5C6",
            "Arn",
          ],
        },
        "Protocol": "sqs",
        "TopicArn": {
          "Ref": "sourcetopic7C3DC892",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "workerqueuedeadletters83F3505C": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsMasterKeyId": {
          "Fn::GetAtt": [
            "kmskey49FBC3B3",
            "Arn",
          ],
        },
        "QueueName": "serviceName-dead-letters",
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
